fix: z-index in select

--- a/src/assets/styles/form/select.scss
+++ b/src/assets/styles/form/select.scss
@@ -29,6 +29,7 @@
       max-height: 400px;
       padding: 8px;
       border: 1px solid $primary-dark-second;
+      z-index: 2;
     }
   }
   &-option {
